hero fix on small screens

--- a/responsive_web_design/Product_Landing_page/styles.css
+++ b/responsive_web_design/Product_Landing_page/styles.css
@@ -152,6 +152,9 @@ input {
     .nav-link {
         padding: 15px 30px;
     }
+    #hero {
+        padding-top: 160px;
+    }
 }
 
 @media only screen and (min-width: 1200px) {
